mb/raptor-cs/talos-2: add basic mainboard structure
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>
Signed-off-by: Krystian Hebel <krystian.hebel@3mdeb.com>

--- a/src/arch/ppc64/Makefile.inc
+++ b/src/arch/ppc64/Makefile.inc
@@ -62,6 +62,7 @@ endif
 ################################################################################
 ifeq ($(CONFIG_ARCH_RAMSTAGE_PPC64),y)
 
+ramstage-y += arch_timer.c
 ramstage-y += stages.c
 ramstage-y += arch_timer.c
 ramstage-y += boot.c
