--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@
 	path = util/goswid
 	url = ../goswid
 	branch = trunk
+[submodule "3rdparty/sb-signing-utils"]
+	path = 3rdparty/sb-signing-utils
+	url = https://github.com/open-power/sb-signing-utils.git
