--- a/src/device/dram/Makefile.inc
+++ b/src/device/dram/Makefile.inc
@@ -1,3 +1,3 @@
-romstage-y += lpddr4.c ddr4.c ddr3.c ddr2.c ddr_common.c
+romstage-y += lpddr4.c ddr4.c ddr3.c ddr2.c ddr_common.c rcd.c
 
 ramstage-y += lpddr4.c ddr4.c ddr3.c ddr2.c ddr_common.c spd.c
