soc/power9/timer.c: implement udelay() using Decrementer Exception
Implementation that busy-reads Time Base register would be too slow.
Reading the register so often results in reduced performance of
initialization performed by other hardware than the main CPU.

Another approach is to use Hypervisor Decrementer Interrupt, but because
of hardwired interrupt handler vector offsets this may not be possible
in every stage.

Thanks to 'wait' instruction and exception definition on POWER it is
possible to use Decrementer Exception without actually implementing
Decrementer Interrupt handler. This results in a rather concise
implementation that doesn't cause performance issues.

Signed-off-by: Krystian Hebel <krystian.hebel@3mdeb.com>
Change-Id: I74cc95a503d4f3642609eff3b781f0b1c3168a3d

--- a/src/soc/ibm/power9/Makefile.inc
+++ b/src/soc/ibm/power9/Makefile.inc
@@ -21,6 +21,7 @@ romstage-y += istep_14_2.c
 romstage-y += istep_14_5.c
 romstage-y += i2c.c
 romstage-y += ccs.c
+romstage-y += timer.c
 ramstage-y += chip.c
 ramstage-y += rom_media.c
 ramstage-y += timer.c
