soc/power9: add DT to CBFS, load and pass it to payload
Signed-off-by: Igor Bagnucki <bagnucki02@gmail.com>
Signed-off-by: Sergii Dmytruk <sergii.dmytruk@3mdeb.com>
Change-Id: I0bdac7ca3125fe299c6f3fae56fcd9034b567f1c

--- a/src/soc/ibm/power9/Makefile.inc
+++ b/src/soc/ibm/power9/Makefile.inc
@@ -42,4 +42,14 @@ ramstage-y += int_vectors.S
 ramstage-y += i2c.c
 ramstage-y += occ.c
 
+MB_DIR = src/mainboard/$(MAINBOARDDIR)
+ONECPU_DTB = 1-cpu.dtb
+
+$(obj)/%.dtb: $(MB_DIR)/%.dts
+	dtc -I dts -O dtb -o $@ -i $(MB_DIR) $<
+
+cbfs-files-y += $(ONECPU_DTB)
+$(ONECPU_DTB)-file := $(obj)/$(ONECPU_DTB)
+$(ONECPU_DTB)-type := raw
+
 endif
