ibm/power9/: implement istep 18.11
Change-Id: I49030208099337176a2b4c961bd5ff7c8409f5c5
Signed-off-by: Igor Bagnucki <igor.bagnucki@3mdeb.com>
Signed-off-by: Krystian Hebel <krystian.hebel@3mdeb.com>

--- a/src/soc/ibm/power9/Makefile.inc
+++ b/src/soc/ibm/power9/Makefile.inc
@@ -25,5 +25,6 @@ romstage-y += timer.c
 ramstage-y += chip.c
 ramstage-y += rom_media.c
 ramstage-y += timer.c
+ramstage-y += istep_18_11.c
 
 endif
