soc/power9/: implement istep 18.12
Change-Id: Ied85cde0e1525415022e39569cd3912d7be29146
Signed-off-by: Igor Bagnucki <igor.bagnucki@3mdeb.com>
Signed-off-by: Krystian Hebel <krystian.hebel@3mdeb.com>

--- a/src/soc/ibm/power9/Makefile.inc
+++ b/src/soc/ibm/power9/Makefile.inc
@@ -26,5 +26,6 @@ ramstage-y += chip.c
 ramstage-y += rom_media.c
 ramstage-y += timer.c
 ramstage-y += istep_18_11.c
+ramstage-y += istep_18_12.c
 
 endif
