soc/power9/mvpd.c: implement mvpd_extract_ring()
Rings are basically blobs marked with some metadata that identifies
them. They are stored inside keywords within some records of MVPD.
Collection of rings makes a tor.

Change-Id: I40856615f727f2d4358db19de647ca49ffba41e5
Signed-off-by: Sergii Dmytruk <sergii.dmytruk@3mdeb.com>

--- a/src/soc/ibm/power9/Makefile.inc
+++ b/src/soc/ibm/power9/Makefile.inc
@@ -29,5 +29,7 @@ ramstage-y += rom_media.c
 ramstage-y += timer.c
 ramstage-y += istep_18_11.c
 ramstage-y += istep_18_12.c
+ramstage-y += mvpd.c
+ramstage-y += vpd.c
 
 endif
