soc/power9/xive.c: implement interrupt controller initialization
Signed-off-by: Krystian Hebel <krystian.hebel@3mdeb.com>
Change-Id: I02ea5dc146a39e90d5885e98ecb795150f16d864

--- a/src/soc/ibm/power9/Makefile.inc
+++ b/src/soc/ibm/power9/Makefile.inc
@@ -36,5 +36,7 @@ ramstage-y += vpd.c
 ramstage-y += tor.c
 ramstage-y += powerbus.c
 ramstage-y += pstates.c
+ramstage-y += xive.c
+ramstage-y += int_vectors.S
 
 endif
