soc/power9/: support FSI I2C
Change-Id: I8f0f3e392c588e45f11d2a3cbd33b72570980d48
Signed-off-by: Sergii Dmytruk <sergii.dmytruk@3mdeb.com>

--- a/src/soc/ibm/power9/Makefile.inc
+++ b/src/soc/ibm/power9/Makefile.inc
@@ -45,6 +45,7 @@ ramstage-y += xive.c
 ramstage-y += int_vectors.S
 ramstage-y += i2c.c
 ramstage-y += occ.c
+ramstage-y += fsi.c
 
 MB_DIR = src/mainboard/$(MAINBOARDDIR)
 ONECPU_DTB = 1-cpu.dtb
