mb/clevo/tgl-u: Add Clevo NS50 Tiger Lake laptop support
Change-Id: I90ad6ec1c174aa09329b4979205c41a3ec458849
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>

--- a/src/mainboard/clevo/tgl-u/Kconfig
+++ b/src/mainboard/clevo/tgl-u/Kconfig
@@ -27,6 +27,10 @@ config BOARD_CLEVO_L140MU
 config BOARD_CLEVO_NV40MZ
 	select BOARD_CLEVO_TGLU_COMMON
 
+config BOARD_CLEVO_NS50MU
+	select BOARD_CLEVO_TGLU_COMMON
+	select EC_SYSTEM76_EC_COLOR_KEYBOARD
+
 if BOARD_CLEVO_TGLU_COMMON
 
 config MAINBOARD_DIR
@@ -35,14 +39,17 @@ config MAINBOARD_DIR
 config VARIANT_DIR
 	default "l140mu" if BOARD_CLEVO_L140MU
 	default "nv40mz" if BOARD_CLEVO_NV40MZ
+	default "ns50mu" if BOARD_CLEVO_NS50MU
 
 config MAINBOARD_PART_NUMBER
 	default "L140MU" if BOARD_CLEVO_L140MU
 	default "NV40MZ" if BOARD_CLEVO_NV40MZ
+	default "NS50MU" if BOARD_CLEVO_NS50MU
 
 config MAINBOARD_VERSION
 	default "2.2A" if BOARD_CLEVO_L140MU
 	default "2.2A" if BOARD_CLEVO_NV40MZ
+	default "2.2A" if BOARD_CLEVO_NS50MU
 
 config DEVICETREE
 	default "variants/\$(CONFIG_VARIANT_DIR)/devicetree.cb"
@@ -50,6 +57,7 @@ config DEVICETREE
 config CBFS_SIZE
 	default 0xb00000 if BOARD_CLEVO_L140MU
 	default 0xb00000 if BOARD_CLEVO_NV40MZ
+	default 0xb00000 if BOARD_CLEVO_NS50MU
 
 config CONSOLE_POST
 	default y
@@ -60,6 +68,7 @@ config UART_FOR_CONSOLE
 config TPM_PIRQ
 	default 0x77 if BOARD_CLEVO_L140MU # GPP_C9_IRQ
 	default 0x1C if BOARD_CLEVO_NV40MZ # GPP_C14_IRQ
+	default 0x1C if BOARD_CLEVO_NS50MU # GPP_C14_IRQ
 
 config POST_DEVICE
 	default n
