soc/amd/picasso: Fix non-A/B VBOOT APOB_NV
On chromeos targets using a psp verstage is required to boot, however
using a RW_A/B scheme is not needed. In the plain RO we still want to
have the APOB_NV region used.

Change-Id: I64617fa9cf56d0f7da9f2a384437a28e76cfb4d7
Signed-off-by: Arthur Heymans <arthur@aheymans.xyz>

--- a/src/soc/amd/picasso/Makefile.inc
+++ b/src/soc/amd/picasso/Makefile.inc
@@ -194,7 +194,7 @@ OPT_EFS_SPI_MICRON_FLAG=$(call add_opt_prefix, $(CONFIG_EFS_SPI_MICRON_FLAG), --
 
 OPT_PSP_SOFTFUSE=$(call add_opt_prefix, $(PSP_SOFTFUSE), --soft-fuse)
 
-ifeq ($(CONFIG_VBOOT),)
+ifneq ($(CONFIG_VBOOT_SLOTS_RW_A),y)
 OPT_APOB0_NV_SIZE=$(OPT_APOB_NV_SIZE)
 OPT_APOB0_NV_BASE=$(OPT_APOB_NV_BASE)
 endif
