--- a/src/mainboard/clevo/tgl-u/Kconfig
+++ b/src/mainboard/clevo/tgl-u/Kconfig
@@ -17,10 +17,14 @@ config BOARD_CLEVO_TGLU_COMMON
 	select SOC_INTEL_TIGERLAKE
 	select SPD_READ_BY_WORD
 	select SYSTEM_TYPE_LAPTOP
+	select EC_CLEVO_IT5570
 
 config BOARD_CLEVO_L140MU
 	select BOARD_CLEVO_TGLU_COMMON
 	select HAVE_SPD_IN_CBFS
+
+config BOARD_CLEVO_NV40MZ
+	select BOARD_CLEVO_TGLU_COMMON
 
 if BOARD_CLEVO_TGLU_COMMON
 
@@ -29,18 +33,22 @@ config MAINBOARD_DIR
 
 config VARIANT_DIR
 	default "l140mu" if BOARD_CLEVO_L140MU
+	default "nv40mz" if BOARD_CLEVO_NV40MZ
 
 config MAINBOARD_PART_NUMBER
 	default "L140MU" if BOARD_CLEVO_L140MU
+	default "NV40MZ" if BOARD_CLEVO_NV40MZ
 
 config MAINBOARD_VERSION
 	default "2.2A" if BOARD_CLEVO_L140MU
+	default "2.2A" if BOARD_CLEVO_NV40MZ
 
 config DEVICETREE
 	default "variants/\$(CONFIG_VARIANT_DIR)/devicetree.cb"
 
 config CBFS_SIZE
 	default 0xb00000 if BOARD_CLEVO_L140MU
+	default 0xb00000 if BOARD_CLEVO_NV40MZ
 
 config CONSOLE_POST
 	default y
@@ -50,6 +58,7 @@ config UART_FOR_CONSOLE
 
 config TPM_PIRQ
 	default 0x77 if BOARD_CLEVO_L140MU # GPP_C9_IRQ
+	default 0x1C if BOARD_CLEVO_NV40MZ # GPP_C14_IRQ
 
 config POST_DEVICE
 	default n
