--- a/src/soc/ibm/power9/Makefile.inc
+++ b/src/soc/ibm/power9/Makefile.inc
@@ -12,6 +12,7 @@ romstage-y += powerbus.c
 romstage-y += istep_8_1.c
 romstage-y += istep_8_2.c
 romstage-y += istep_8_3.c
+romstage-y += istep_8_4.c
 romstage-y += istep_10_10.c
 romstage-y += istep_10_12.c
 romstage-y += istep_10_13.c
