--- a/dasharo/releases.yaml
+++ b/dasharo/releases.yaml
@@ -1,4 +1,17 @@
 releases:
+        - version: v1.0.16
+          added:
+                - Vboot Verified + Measured Boot
+                - Vboot recovery notification in TianoCore
+                - UEFI Shell
+                - UEFI Secure Boot
+                - Intel PTT Firmware TPM support
+          changed:
+                - FSP changed to CometLake2
+          known_issues:
+                - description: i225 network controller initialization takes too much time
+                  url: https://github.com/Dasharo/dasharo-issues/issues/65
+
         - version: v1.0.13
           added:
                 - UEFI boot support
