--- a/src/mainboard/protectli/vault_cml/Kconfig
+++ b/src/mainboard/protectli/vault_cml/Kconfig
@@ -15,8 +15,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select SEABIOS_ADD_SERCON_PORT_FILE if PAYLOAD_SEABIOS
 	select SPI_FLASH_MACRONIX
 	select TPM_MEASURED_BOOT
-	select MAINBOARD_HAS_CRB_TPM
-	select HAVE_INTEL_PTT
+	select MAINBOARD_HAS_LPC_TPM
 	select MAINBOARD_HAS_TPM2
 
 config MAINBOARD_DIR
