--- a/src/mainboard/protectli/vault_cml/Kconfig
+++ b/src/mainboard/protectli/vault_cml/Kconfig
@@ -1,4 +1,4 @@
-if BOARD_PROTECTLI_VP4620
+if BOARD_PROTECTLI_VP46xx
 
 config BOARD_SPECIFIC_OPTIONS
 	def_bool y
@@ -24,7 +24,7 @@ config MAINBOARD_DIR
 
 config MAINBOARD_PART_NUMBER
 	string
-	default "VP4620"
+	default "VP46xx"
 
 config MAINBOARD_FAMILY
 	string
