soc/power9/: expose CONFIG_MAX_CPUS in menuconfig and use in code
Signed-off-by: Sergii Dmytruk <sergii.dmytruk@3mdeb.com>

--- a/src/mainboard/raptor-cs/talos-2/Kconfig
+++ b/src/mainboard/raptor-cs/talos-2/Kconfig
@@ -60,8 +60,8 @@ config DIMM_SPD_SIZE
 	default 512
 
 config MAX_CPUS
-	int
-	default 1
+	int "Maximum number of CPUs to use (1-2)"
+	default 2
 
 config MAINBOARD_VENDOR
 	string
