--- a/src/mainboard/clevo/tgl-u/Kconfig
+++ b/src/mainboard/clevo/tgl-u/Kconfig
@@ -17,7 +17,8 @@ config BOARD_CLEVO_TGLU_COMMON
 	select SOC_INTEL_TIGERLAKE
 	select SPD_READ_BY_WORD
 	select SYSTEM_TYPE_LAPTOP
-	select EC_CLEVO_IT5570
+	select EC_SYSTEM76_EC
+    select EC_SYSTEM76_EC_BAT_THRESHOLDS
 
 config BOARD_CLEVO_L140MU
 	select BOARD_CLEVO_TGLU_COMMON
