--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 	path = 3rdparty/stm
 	url = https://review.coreboot.org/STM.git
 	branch = stmpe
+[submodule "3rdparty/dasharo-blobs"]
+	path = 3rdparty/dasharo-blobs
+	url = git@github.com:Dasharo/dasharo-blobs.git
