mb/clevo/tgl-u/variants/ns50mu: enable BayHubTech LV2 driver for SD card reader
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>

--- a/src/mainboard/clevo/tgl-u/Kconfig
+++ b/src/mainboard/clevo/tgl-u/Kconfig
@@ -30,6 +30,7 @@ config BOARD_CLEVO_NV40MZ
 config BOARD_CLEVO_NS50MU
 	select BOARD_CLEVO_TGLU_COMMON
 	select EC_SYSTEM76_EC_COLOR_KEYBOARD
+	select DRIVERS_GENERIC_BAYHUB_LV2
 
 if BOARD_CLEVO_TGLU_COMMON
 
