Common base fixes
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>
Change-Id: I2fef4be8e620e0906feda7fcfcfafd588f926b5e

--- a/.gitmodules
+++ b/.gitmodules
@@ -63,5 +63,5 @@
 	branch = stmpe
 [submodule "util/goswid"]
 	path = util/goswid
-	url = ../goswid
+	url = https://review.coreboot.org/goswid.git
 	branch = trunk
