--- a/src/mainboard/clevo/tgl-u/Kconfig
+++ b/src/mainboard/clevo/tgl-u/Kconfig
@@ -26,6 +26,7 @@ config BOARD_CLEVO_L140MU
 
 config BOARD_CLEVO_NV40MZ
 	select BOARD_CLEVO_TGLU_COMMON
+	select DRIVER_NVIDIA_OPTIMUS
 
 config BOARD_CLEVO_NS50MU
 	select BOARD_CLEVO_TGLU_COMMON
