--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -26,7 +26,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select TPM_MEASURED_BOOT
 
 config MAINBOARD_DIR
-	default "system76/adl-p"
+	default "clevo/adl-p"
 
 config VARIANT_DIR
 	default "ns70pu" if BOARD_SYSTEM76_NS70PU
