configs/config.clevo_ns70pu and src/mainboard/clevo/adl-p: Change names
Signed-off-by: Kacper Stojek <kacper.stojek@3mdeb.com>

--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -1,4 +1,4 @@
-if BOARD_SYSTEM76_NS70PU
+if BOARD_CLEVO_NS70PU
 
 config BOARD_SPECIFIC_OPTIONS
 	def_bool y
@@ -6,12 +6,11 @@ config BOARD_SPECIFIC_OPTIONS
 	select DRIVERS_I2C_HID
 	select DRIVERS_INTEL_PMC
 	select DRIVERS_INTEL_USB4_RETIMER
-	select EC_SYSTEM76_EC
-	select EC_SYSTEM76_EC_COLOR_KEYBOARD if BOARD_SYSTEM76_NS70PU
+	select EC_CLEVO_EC
+	select EC_CLEVO_EC_COLOR_KEYBOARD if BOARD_CLEVO_NS70PU
 	select HAVE_ACPI_TABLES
 	select HAVE_CMOS_DEFAULT
 	select HAVE_OPTION_TABLE
-	select HAVE_SPD_IN_CBFS if BOARD_SYSTEM76_LEMP11
 	select INTEL_GMA_HAVE_VBT
 	select INTEL_LPSS_UART_FOR_CONSOLE
 	select MAINBOARD_HAS_TPM2
@@ -29,19 +28,19 @@ config MAINBOARD_DIR
 	default "clevo/adl-p"
 
 config VARIANT_DIR
-	default "ns70pu" if BOARD_SYSTEM76_NS70PU
+	default "ns70pu" if BOARD_CLEVO_NS70PU
 
 config OVERRIDE_DEVICETREE
 	default "variants/\$(CONFIG_VARIANT_DIR)/overridetree.cb"
 
 config MAINBOARD_PART_NUMBER
-	default "ns70pu" if BOARD_SYSTEM76_NS70PU
+	default "ns70pu" if BOARD_CLEVO_NS70PU
 
 config MAINBOARD_SMBIOS_PRODUCT_NAME
-	default "Darter Pro" if BOARD_SYSTEM76_NS70PU
+	default "NS5x_NS7xPU" if BOARD_CLEVO_NS70PU
 
 config MAINBOARD_VERSION
-	default "ns70pu" if BOARD_SYSTEM76_NS70PU
+	default "ns70pu" if BOARD_CLEVO_NS70PU
 
 config CBFS_SIZE
 	default 0xA00000
