--- a/src/mainboard/clevo/tgl-u/Kconfig
+++ b/src/mainboard/clevo/tgl-u/Kconfig
@@ -20,18 +20,30 @@ config BOARD_CLEVO_TGLU_COMMON
 	select EC_SYSTEM76_EC
 	select EC_SYSTEM76_EC_BAT_THRESHOLDS
 
-config BOARD_CLEVO_L140MU
+config BOARD_CLEVO_L140MU_BASE
+	bool
 	select BOARD_CLEVO_TGLU_COMMON
 	select HAVE_SPD_IN_CBFS
 
-config BOARD_CLEVO_NV40MZ
+config BOARD_CLEVO_NV40MZ_BASE
+	bool
 	select BOARD_CLEVO_TGLU_COMMON
 	select DRIVER_NVIDIA_OPTIMUS
 
-config BOARD_CLEVO_NS50MU
+config BOARD_CLEVO_NS50MU_BASE
+	bool
 	select BOARD_CLEVO_TGLU_COMMON
 	select EC_SYSTEM76_EC_COLOR_KEYBOARD
 	select DRIVERS_GENERIC_BAYHUB_LV2
+
+config BOARD_CLEVO_L140MU
+	select BOARD_CLEVO_L140MU_BASE
+
+config BOARD_CLEVO_NV40MZ
+	select BOARD_CLEVO_NV40MZ_BASE
+
+config BOARD_CLEVO_NS50MU
+	select BOARD_CLEVO_NS50MU_BASE
 
 if BOARD_CLEVO_TGLU_COMMON
 
@@ -39,9 +51,9 @@ config MAINBOARD_DIR
 	default "clevo/tgl-u"
 
 config VARIANT_DIR
-	default "l140mu" if BOARD_CLEVO_L140MU
-	default "nv40mz" if BOARD_CLEVO_NV40MZ
-	default "ns50mu" if BOARD_CLEVO_NS50MU
+	default "l140mu" if BOARD_CLEVO_L140MU_BASE
+	default "nv40mz" if BOARD_CLEVO_NV40MZ_BASE
+	default "ns50mu" if BOARD_CLEVO_NS50MU_BASE
 
 config MAINBOARD_PART_NUMBER
 	default "L140MU" if BOARD_CLEVO_L140MU
@@ -49,9 +61,9 @@ config MAINBOARD_PART_NUMBER
 	default "NS50MU" if BOARD_CLEVO_NS50MU
 
 config MAINBOARD_VERSION
-	default "2.2A" if BOARD_CLEVO_L140MU
-	default "2.2A" if BOARD_CLEVO_NV40MZ
-	default "2.2A" if BOARD_CLEVO_NS50MU
+	default "2.2A" if BOARD_CLEVO_L140MU_BASE
+	default "2.2A" if BOARD_CLEVO_NV40MZ_BASE
+	default "2.2A" if BOARD_CLEVO_NS50MU_BASE
 
 config MAINBOARD_FAMILY
 	string
@@ -61,9 +73,9 @@ config DEVICETREE
 	default "variants/\$(CONFIG_VARIANT_DIR)/devicetree.cb"
 
 config CBFS_SIZE
-	default 0xb00000 if BOARD_CLEVO_L140MU
-	default 0xb00000 if BOARD_CLEVO_NV40MZ
-	default 0xb00000 if BOARD_CLEVO_NS50MU
+	default 0xb00000 if BOARD_CLEVO_L140MU_BASE
+	default 0xb00000 if BOARD_CLEVO_NV40MZ_BASE
+	default 0xb00000 if BOARD_CLEVO_NS50MU_BASE
 
 config CONSOLE_POST
 	default y
@@ -72,9 +84,9 @@ config UART_FOR_CONSOLE
 	default 2
 
 config TPM_PIRQ
-	default 0x77 if BOARD_CLEVO_L140MU # GPP_C9_IRQ
-	default 0x1C if BOARD_CLEVO_NV40MZ # GPP_C14_IRQ
-	default 0x1C if BOARD_CLEVO_NS50MU # GPP_C14_IRQ
+	default 0x77 if BOARD_CLEVO_L140MU_BASE # GPP_C9_IRQ
+	default 0x1C if BOARD_CLEVO_NV40MZ_BASE # GPP_C14_IRQ
+	default 0x1C if BOARD_CLEVO_NS50MU_BASE # GPP_C14_IRQ
 
 config VBOOT
 	select VBOOT_NO_BOARD_SUPPORT
