--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -1,13 +1,10 @@
-if BOARD_CLEVO_NS70PU
-
-config BOARD_SPECIFIC_OPTIONS
-	def_bool y
+config BOARD_CLEVO_ADLP_COMMON
+	def_bool n
 	select BOARD_ROMSIZE_KB_32768
 	select DRIVERS_I2C_HID
 	select DRIVERS_INTEL_PMC
 	select DRIVERS_INTEL_USB4_RETIMER
 	select EC_CLEVO_EC
-	select EC_CLEVO_EC_COLOR_KEYBOARD if BOARD_CLEVO_NS70PU
 	select HAVE_ACPI_TABLES
 	select HAVE_CMOS_DEFAULT
 	select HAVE_OPTION_TABLE
@@ -23,23 +20,33 @@ config BOARD_SPECIFIC_OPTIONS
 	select SPD_READ_BY_WORD
 	select SYSTEM_TYPE_LAPTOP
 
+config BOARD_CLEVO_NS70PU_BASE
+	bool
+	select BOARD_CLEVO_ADLP_COMMON
+	select EC_CLEVO_EC_COLOR_KEYBOARD
+
+config BOARD_CLEVO_NS70PU
+	select BOARD_CLEVO_NS70PU_BASE
+
+if BOARD_CLEVO_ADLP_COMMON
+
 config MAINBOARD_DIR
 	default "clevo/adl-p"
 
 config VARIANT_DIR
-	default "ns70pu" if BOARD_CLEVO_NS70PU
+	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
 
 config OVERRIDE_DEVICETREE
 	default "variants/\$(CONFIG_VARIANT_DIR)/overridetree.cb"
 
 config MAINBOARD_PART_NUMBER
-	default "ns70pu" if BOARD_CLEVO_NS70PU
+	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
 
 config MAINBOARD_SMBIOS_PRODUCT_NAME
-	default "NS5x_NS7xPU" if BOARD_CLEVO_NS70PU
+	default "NS5x_NS7xPU" if BOARD_CLEVO_NS70PU_BASE
 
 config MAINBOARD_VERSION
-	default "ns70pu" if BOARD_CLEVO_NS70PU
+	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
 
 config CBFS_SIZE
 	default 0xA00000
