src/mainboard/protectli/vault_cml: enable VBOOT_NO_TPM
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/src/mainboard/protectli/vault_cml/Kconfig
+++ b/src/mainboard/protectli/vault_cml/Kconfig
@@ -46,6 +46,7 @@ config VBOOT
 	select GBB_FLAG_DISABLE_PD_SOFTWARE_SYNC
 	select VBOOT_ALWAYS_ENABLE_DISPLAY
 	select VBOOT_NO_BOARD_SUPPORT
+	select VBOOT_NO_TPM
 
 config VBOOT_SLOTS_RW_A
 	default y if VBOOT
