src/mainboard/clevo/adl-p/Kconfig: change the SMBIOS manufacturer
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -45,6 +45,9 @@ config MAINBOARD_PART_NUMBER
 config MAINBOARD_SMBIOS_PRODUCT_NAME
 	default "NS5x_NS7xPU" if BOARD_CLEVO_NS70PU_BASE
 
+config MAINBOARD_SMBIOS_MANUFACTURER
+	default "Notebook"
+
 config MAINBOARD_VERSION
 	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
 
