--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -29,6 +29,14 @@ config BOARD_CLEVO_NS70PU_BASE
 config BOARD_CLEVO_NS70PU
 	select BOARD_CLEVO_NS70PU_BASE
 
+config BOARD_CLEVO_NS4X_BASE
+	bool
+	select BOARD_CLEVO_ADLP_COMMON
+	select EC_CLEVO_EC_COLOR_KEYBOARD
+
+config BOARD_CLEVO_NS70PU
+	select BOARD_CLEVO_NS4X_BASE
+
 if BOARD_CLEVO_ADLP_COMMON
 
 config MAINBOARD_DIR
@@ -36,21 +44,25 @@ config MAINBOARD_DIR
 
 config VARIANT_DIR
 	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
+	default "nv4x" if BOARD_CLEVO_NV4X_BASE
 
 config OVERRIDE_DEVICETREE
 	default "variants/\$(CONFIG_VARIANT_DIR)/overridetree.cb"
 
 config MAINBOARD_PART_NUMBER
 	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
+	default "nv4x" if BOARD_CLEVO_NV4X_BASE
 
 config MAINBOARD_SMBIOS_PRODUCT_NAME
 	default "NS5x_NS7xPU" if BOARD_CLEVO_NS70PU_BASE
+	default "nv4x" if BOARD_CLEVO_NV4X_BASE
 
 config MAINBOARD_SMBIOS_MANUFACTURER
 	default "Notebook"
 
 config MAINBOARD_VERSION
 	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
+	default "nv4x" if BOARD_CLEVO_NV4X_BASE
 
 config CBFS_SIZE
 	default 0xA00000
