--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -27,15 +27,17 @@ config BOARD_CLEVO_NS70PU_BASE
 	select DRIVERS_GENERIC_BAYHUB_LV2
 
 config BOARD_CLEVO_NS70PU
+	bool
 	select BOARD_CLEVO_NS70PU_BASE
 
-config BOARD_CLEVO_NS4X_BASE
+config BOARD_CLEVO_NV40PZ_BASE
 	bool
 	select BOARD_CLEVO_ADLP_COMMON
 	select EC_CLEVO_EC_COLOR_KEYBOARD
 
-config BOARD_CLEVO_NS70PU
-	select BOARD_CLEVO_NS4X_BASE
+config BOARD_CLEVO_NV40PZ
+	bool
+	select BOARD_CLEVO_NV40PZ_BASE
 
 if BOARD_CLEVO_ADLP_COMMON
 
@@ -44,25 +46,25 @@ config MAINBOARD_DIR
 
 config VARIANT_DIR
 	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
-	default "nv4x" if BOARD_CLEVO_NV4X_BASE
+	default "nv40pz" if BOARD_CLEVO_NV40PZ_BASE
 
 config OVERRIDE_DEVICETREE
 	default "variants/\$(CONFIG_VARIANT_DIR)/overridetree.cb"
 
 config MAINBOARD_PART_NUMBER
 	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
-	default "nv4x" if BOARD_CLEVO_NV4X_BASE
+	default "nv40pz" if BOARD_CLEVO_NV40PZ_BASE
 
 config MAINBOARD_SMBIOS_PRODUCT_NAME
 	default "NS5x_NS7xPU" if BOARD_CLEVO_NS70PU_BASE
-	default "nv4x" if BOARD_CLEVO_NV4X_BASE
+	default "NV41PZ" if BOARD_CLEVO_NV40PZ_BASE # FIXME TODO
 
 config MAINBOARD_SMBIOS_MANUFACTURER
 	default "Notebook"
 
 config MAINBOARD_VERSION
 	default "ns70pu" if BOARD_CLEVO_NS70PU_BASE
-	default "nv4x" if BOARD_CLEVO_NV4X_BASE
+	default "nv40pz" if BOARD_CLEVO_NV40PZ_BASE
 
 config CBFS_SIZE
 	default 0xA00000
