--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -4,7 +4,7 @@ config BOARD_CLEVO_ADLP_COMMON
 	select DRIVERS_I2C_HID
 	select DRIVERS_INTEL_PMC
 	select DRIVERS_INTEL_USB4_RETIMER
-	select EC_CLEVO_EC
+	select EC_SYSTEM76_EC
 	select HAVE_ACPI_TABLES
 	select HAVE_CMOS_DEFAULT
 	select HAVE_OPTION_TABLE
@@ -23,7 +23,7 @@ config BOARD_CLEVO_ADLP_COMMON
 config BOARD_CLEVO_NS70PU_BASE
 	bool
 	select BOARD_CLEVO_ADLP_COMMON
-	select EC_CLEVO_EC_COLOR_KEYBOARD
+	select EC_SYSTEM76_EC_COLOR_KEYBOARD
 	select DRIVERS_GENERIC_BAYHUB_LV2
 
 config BOARD_CLEVO_NS70PU
