--- a/src/mainboard/protectli/vault_ehl/Kconfig
+++ b/src/mainboard/protectli/vault_ehl/Kconfig
@@ -12,6 +12,39 @@ config BOARD_SPECIFIC_OPTIONS
 	select SPI_FLASH_MACRONIX
 	select INTEL_GMA_HAVE_VBT
 	select SEABIOS_ADD_SERCON_PORT_FILE if PAYLOAD_SEABIOS
-	select NEED_IFWI
 
-endif
+
+config MAINBOARD_DIR
+	string
+	default "protectli/vault_ehl"
+
+config DEVICETREE
+	string
+	default "devicetree.cb"
+
+config MAINBOARD_PART_NUMBER
+	string
+	default "VP2420"
+
+config MAX_CPUS
+	int
+	default 4
+
+config SOC_INTEL_COMMON_BLOCK_SGX_ENABLE
+	bool
+	default y
+
+config FMDFILE
+	string
+	default "src/mainboard/$(CONFIG_MAINBOARD_DIR)/board.fmd" if !VBOOT
+
+config VGA_BIOS_ID
+	string
+	default "8086,3185"
+
+config PXE_ROM_ID
+	string
+	default "8086,157b"
+
+
+endif # BOARD_PROTECTLI_VP2420
