mb/novacustom/adl-p: add nv4x
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>

--- a/src/mainboard/novacustom/adl-p/Kconfig
+++ b/src/mainboard/novacustom/adl-p/Kconfig
@@ -2,5 +2,6 @@ if BOARD_NOVACUSTOM_NS5X_ADLP
 
 config MAINBOARD_PART_NUMBER
 	default "ns5x" if BOARD_NOVACUSTOM_NS5X_ADLP
+	default "nv4x" if BOARD_NOVACUSTOM_NV4X_ADLP
 
 endif
