--- a/src/soc/intel/braswell/Kconfig
+++ b/src/soc/intel/braswell/Kconfig
@@ -18,8 +18,6 @@ config CPU_SPECIFIC_OPTIONS
 	select CPU_INTEL_TURBO_NOT_PACKAGE_SCOPED
 	select HAVE_SMI_HANDLER
 	select PARALLEL_MP
-	select PCIEXP_ASPM
-	select PCIEXP_CLK_PM
 	select PCIEXP_COMMON_CLOCK
 	select PLATFORM_USES_FSP1_1
 	select REG_SCRIPT
@@ -46,6 +44,7 @@ config CPU_SPECIFIC_OPTIONS
 	select CPU_INTEL_COMMON
 	select SOUTHBRIDGE_INTEL_COMMON_SMBUS
 	select SOUTHBRIDGE_INTEL_COMMON_SPI_SILVERMONT
+	select IOAPIC
 
 config DCACHE_BSP_STACK_SIZE
 	hex
