clevo/tlg-u: move SMBIOS strings from .config to Kconfig
Signed-off-by: Maciej Pijanowski <maciej.pijanowski@3mdeb.com>

--- a/src/mainboard/clevo/tgl-u/Kconfig
+++ b/src/mainboard/clevo/tgl-u/Kconfig
@@ -60,6 +60,13 @@ config MAINBOARD_PART_NUMBER
 	default "NV40MZ" if BOARD_CLEVO_NV40MZ
 	default "NS50MU" if BOARD_CLEVO_NS50MU
 
+config MAINBOARD_SMBIOS_PRODUCT_NAME
+	default "NS50_70MU" if BOARD_CLEVO_NS50MU_BASE
+	default "NV4XMB,ME,MZ" if BOARD_CLEVO_NV40MZ_BASE
+
+config MAINBOARD_SMBIOS_MANUFACTURER
+	default "Notebook"
+
 config MAINBOARD_VERSION
 	default "2.2A" if BOARD_CLEVO_L140MU_BASE
 	default "2.2A" if BOARD_CLEVO_NV40MZ_BASE
