--- a/src/mainboard/novacustom/adl-p/Kconfig
+++ b/src/mainboard/novacustom/adl-p/Kconfig
@@ -1,7 +1,7 @@
-if BOARD_NOVACUSTOM_NS5X_ADLP
+if BOARD_NOVACUSTOM_NV4X_ADLP || BOARD_NOVACUSTOM_NS5X_ADLP
 
 config MAINBOARD_PART_NUMBER
-	default "ns5x" if BOARD_NOVACUSTOM_NS5X_ADLP
-	default "nv4x" if BOARD_NOVACUSTOM_NV4X_ADLP
+	default "nv40pz" if BOARD_NOVACUSTOM_NV4X_ADLP
+	default "ns50pu" if BOARD_NOVACUSTOM_NS5X_ADLP
 
 endif
