--- a/.gitmodules
+++ b/.gitmodules
@@ -65,3 +65,6 @@
 	path = util/goswid
 	url = https://review.coreboot.org/goswid.git
 	branch = trunk
+[submodule "3rdparty/dasharo-blobs"]
+	path = 3rdparty/dasharo-blobs
+	url = https://github.com/Dasharo/dasharo-blobs.git
