soc/intel/alderlake: add option to disable ME via HAP
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>
Change-Id: I37f81fe2c7720b48d4e94a328aef4df188746679

--- a/src/soc/intel/common/block/cse/Kconfig
+++ b/src/soc/intel/common/block/cse/Kconfig
@@ -54,6 +54,13 @@ config SOC_INTEL_CSE_SEND_EOP_EARLY
 	  In later stages, CSE might be busy and might require more time to process EOP command.
 	  SoC can use this Kconfig to send EOP earlier by itself.
 
+config SOC_INTEL_CSE_HAVE_HAP
+	bool
+	default n
+	help
+	  Use this config to allow common CSE block to disable CSE using the High
+	  Assurance Platform bit in the flash descriptor.
+
 config SOC_INTEL_CSE_LITE_SKU
 	bool
 	default n
