--- a/src/soc/intel/alderlake/Kconfig
+++ b/src/soc/intel/alderlake/Kconfig
@@ -118,7 +118,6 @@ config CPU_SPECIFIC_OPTIONS
 	select SOC_INTEL_COMMON_FSP_RESET
 	select SOC_INTEL_COMMON_PCH_CLIENT
 	select SOC_INTEL_COMMON_RESET
-	select SOC_INTEL_CSE_SEND_EOP_EARLY
 	select SOC_INTEL_CSE_SET_EOP
 	select SOC_INTEL_CSE_HAVE_HAP
 	select SOC_INTEL_MEM_MAPPED_PM_CONFIGURATION
@@ -452,6 +451,9 @@ config USE_COREBOOT_MP_INIT
 	  Upon selection, coreboot performs MP Init.
 
 endchoice
+
+config SOC_INTEL_CSE_SEND_EOP_EARLY
+	default y
 
 if STITCH_ME_BIN
 
