--- a/src/mainboard/msi/ms7d25/Kconfig
+++ b/src/mainboard/msi/ms7d25/Kconfig
@@ -65,6 +65,9 @@ config VBOOT
 config VBOOT_SLOTS_RW_AB
 	default y if VBOOT
 
+config SOC_INTEL_CSE_SEND_EOP_EARLY
+	default n
+
 config FMDFILE
 	string
 	default "src/mainboard/\$(CONFIG_MAINBOARD_DIR)/vboot-rwab.fmd" if VBOOT && VBOOT_SLOTS_RW_AB
