src/mainboard/protectli/vault_ehl: Add CBFS_SIZE to Kconfig and remove board.fmd
Signed-off-by: Kacper Stojek <kacper.stojek@3mdeb.com>

--- a/src/mainboard/protectli/vault_ehl/Kconfig
+++ b/src/mainboard/protectli/vault_ehl/Kconfig
@@ -28,4 +28,8 @@ config MAX_CPUS
 config FMDFILE
 	default "src/mainboard/$(CONFIG_MAINBOARD_DIR)/board.fmd" if !VBOOT
 
+
+config CBFS_SIZE
+	default 0x900000
+
 endif # BOARD_PROTECTLI_VP2420
