--- a/src/soc/intel/common/block/pcie/Kconfig
+++ b/src/soc/intel/common/block/pcie/Kconfig
@@ -1,13 +1,17 @@
 config SOC_INTEL_COMMON_BLOCK_PCIE
 	bool
-	select PCIEXP_ASPM
-	select PCIEXP_COMMON_CLOCK
 	help
 	  Intel Processor common PCIE support
 
 if SOC_INTEL_COMMON_BLOCK_PCIE
 
 source "src/soc/intel/common/block/pcie/*/Kconfig"
+
+config PCIEXP_ASPM
+	default y
+
+config PCIEXP_COMMON_CLOCK
+	default y
 
 config PCIEXP_CLK_PM
 	default y
