--- a/src/mainboard/msi/ms7d25/Kconfig
+++ b/src/mainboard/msi/ms7d25/Kconfig
@@ -61,6 +61,7 @@ config VBOOT
 	select VBOOT_ALWAYS_ENABLE_DISPLAY
 	select VBOOT_NO_BOARD_SUPPORT
 	select HAS_RECOVERY_MRC_CACHE
+	select VBOOT_NO_TPM
 
 config VBOOT_SLOTS_RW_AB
 	default y if VBOOT
