--- a/src/mainboard/protectli/vault_ehl/Kconfig
+++ b/src/mainboard/protectli/vault_ehl/Kconfig
@@ -12,6 +12,7 @@ config BOARD_SPECIFIC_OPTIONS
 	select SPI_FLASH_MACRONIX
 	select INTEL_GMA_HAVE_VBT
 	select SEABIOS_ADD_SERCON_PORT_FILE if PAYLOAD_SEABIOS
+	select MEMORY_MAPPED_TPM
 
 config MAINBOARD_DIR
 	default "protectli/vault_ehl"
