--- a/src/mainboard/protectli/vault_ehl/Kconfig
+++ b/src/mainboard/protectli/vault_ehl/Kconfig
@@ -35,6 +35,9 @@ config VBOOT
 	select GBB_FLAG_DISABLE_PD_SOFTWARE_SYNC
 	select VBOOT_ALWAYS_ENABLE_DISPLAY
 	select VBOOT_NO_BOARD_SUPPORT
+	select VBOOT_NO_TPM
+	select VBOOT_VBNV_CMOS
+	select VBOOT_VBNV_CMOS_BACKUP_TO_FLASH
 
 config VBOOT_SLOTS_RW_A
 	default y if VBOOT
