--- a/src/mainboard/protectli/vault_ehl/Kconfig
+++ b/src/mainboard/protectli/vault_ehl/Kconfig
@@ -39,6 +39,7 @@ config VBOOT
 	select VBOOT_NO_TPM
 	select VBOOT_VBNV_CMOS
 	select VBOOT_VBNV_CMOS_BACKUP_TO_FLASH
+	select VBOOT_SEPARATE_VERSTAGE
 
 config VBOOT_SLOTS_RW_A
 	default y if VBOOT
