--- a/src/mainboard/protectli/vault_cml/Kconfig
+++ b/src/mainboard/protectli/vault_cml/Kconfig
@@ -51,6 +51,9 @@ config VBOOT
 config VBOOT_SLOTS_RW_A
 	default y if VBOOT
 
+config VBOOT_VBNV_OFFSET
+	default 0x56
+
 config FMDFILE
 	default "src/mainboard/\$(CONFIG_MAINBOARD_DIR)/vboot-rwa.fmd" if VBOOT && VBOOT_SLOTS_RW_A
 	default "src/mainboard/\$(CONFIG_MAINBOARD_DIR)/board.fmd"
