--- a/src/mainboard/protectli/vault_cml/Kconfig
+++ b/src/mainboard/protectli/vault_cml/Kconfig
@@ -55,6 +55,9 @@ config VBOOT_SLOTS_RW_A
 config VBOOT_VBNV_OFFSET
 	default 0x56
 
+config PRERAM_CBMEM_CONSOLE_SIZE
+	default 0x1000
+
 config FMDFILE
 	default "src/mainboard/\$(CONFIG_MAINBOARD_DIR)/vboot-rwa.fmd" if VBOOT && VBOOT_SLOTS_RW_A
 	default "src/mainboard/\$(CONFIG_MAINBOARD_DIR)/board.fmd"
