--- a/src/mainboard/protectli/vault_bsw/Kconfig
+++ b/src/mainboard/protectli/vault_bsw/Kconfig
@@ -1,4 +1,4 @@
-if BOARD_PROTECTLI_FW2B || BOARD_PROTECTLI_FW4B
+if BOARD_PROTECTLI_FW2B || BOARD_PROTECTLI_FW4B || BOARD_PROTECTLI_FW4C
 
 config BOARD_SPECIFIC_OPTIONS
 	def_bool y
@@ -9,7 +9,8 @@ config BOARD_SPECIFIC_OPTIONS
 	select HAVE_ACPI_TABLES
 	select SEABIOS_ADD_SERCON_PORT_FILE if PAYLOAD_SEABIOS
 	select SOC_INTEL_BRASWELL
-	select SPI_FLASH_MACRONIX
+	select SPI_FLASH_MACRONIX if BOARD_PROTECTLI_FW2B || BOARD_PROTECTLI_FW4B
+	select SPI_FLASH_WINBOND if BOARD_PROTECTLI_FW4C
 	select SUPERIO_ITE_IT8613E
 
 config MAINBOARD_DIR
@@ -20,6 +21,7 @@ config VARIANT_DIR
 	string
 	default "fw2b" if BOARD_PROTECTLI_FW2B
 	default "fw4b" if BOARD_PROTECTLI_FW4B
+	default "fw4c" if BOARD_PROTECTLI_FW4C
 
 config OVERRIDE_DEVICETREE
 	string
@@ -29,6 +31,7 @@ config MAINBOARD_PART_NUMBER
 	string
 	default "FW2B" if BOARD_PROTECTLI_FW2B
 	default "FW4B" if BOARD_PROTECTLI_FW4B
+	default "FW4C" if BOARD_PROTECTLI_FW4C
 
 config MAINBOARD_VENDOR
 	string
@@ -46,6 +49,7 @@ config MAX_CPUS
 	int
 	default 2 if BOARD_PROTECTLI_FW2B
 	default 4 if BOARD_PROTECTLI_FW4B
+	default 4 if BOARD_PROTECTLI_FW4C
 
 config CBFS_SIZE
 	hex
