src/mainboard/protectli/vault_ehl/die.c: add console die function
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/src/mainboard/protectli/vault_ehl/Makefile.inc
+++ b/src/mainboard/protectli/vault_ehl/Makefile.inc
@@ -5,3 +5,8 @@ bootblock-y += bootblock.c
 romstage-y += romstage.c
 
 ramstage-y += mainboard.c
+
+bootblock-y += die.c
+romstage-y += die.c
+ramstage-y += die.c
+smm-y += die.c
