src/mainboard/clevo/adl-p/Kconfig: unselect SOC_INTEL_CSE_SEND_EOP_EARLY
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>
Change-Id: I6c6073abb0a336ef0221595c1c7db800722ea4d1

--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -112,4 +112,7 @@ config FMDFILE
 config TPM_PIRQ
 	default 0x27 if BOARD_CLEVO_NS50PU_BASE # GPP_E1
 
+config SOC_INTEL_CSE_SEND_EOP_EARLY
+	default n
+
 endif
