mb/clevo/{tgl-u,adl-p}: add crit temperatures for thermal zones
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>

--- a/src/mainboard/clevo/adl-p/Kconfig
+++ b/src/mainboard/clevo/adl-p/Kconfig
@@ -35,6 +35,7 @@ config BOARD_CLEVO_NS50PU
 config BOARD_CLEVO_NV40PZ_BASE
 	bool
 	select BOARD_CLEVO_ADLP_COMMON
+	select EC_SYSTEM76_EC_DGPU
 	select DRIVERS_GENERIC_BAYHUB_LV2
 
 config BOARD_CLEVO_NV40PZ
