src/ec/system76/ec: Make HID configurable
Signed-off-by: Kacper Stojek <kacper.stojek@3mdeb.com>

--- a/src/ec/system76/ec/Kconfig
+++ b/src/ec/system76/ec/Kconfig
@@ -22,3 +22,7 @@ config EC_SYSTEM76_EC_OLED
 	depends on EC_SYSTEM76_EC
 	bool
 	default n
+
+config EC_SYSTEM76_EC_ACPI_DEVICE_HID
+	string
+	default "17761776"
